// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader wrapper Loader renders correctly with text 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#1e5ad4"
    hidesWhenStopped={true}
    size="large"
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Ubuntu-Regular",
          "fontSize": 31.57894736842105,
          "marginTop": 19.736842105263158,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Loader wrapper Loader renders correctly without text 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="black"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;
